feat (Livrable2): Séparer le code en plusieurs blocs pour réutiliser les blocs plus tard

--- a/Livrable2.ipynb
+++ b/Livrable2.ipynb
@@ -196,8 +196,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Imports et paramètres de la simulation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,66 +219,187 @@
     "# ------------------------------------------------- #\n",
     "# Paramètres de la simulation\n",
     "# ------------------------------------------------- #\n",
+    "# Limite de temps pour la résolution du problème (en secondes)\n",
     "TIME_LIMIT = 300\n",
-    "NB_TRUCKS = 3\n",
-    "NB_VERTICES = 20\n",
+    "# Nombre de camions\n",
+    "NB_TRUCKS = 2\n",
+    "# Nombre de villes\n",
+    "NB_VERTICES = 23\n",
+    "# Ville de départ (doit être < NB_VERTICES)\n",
     "START_CITY = round(NB_VERTICES / 2)\n",
-    "PROBABILITY_EDGE = 0.6\n",
-    "MIN_WEIGHT = 10\n",
-    "MAX_WEIGHT = 500\n",
-    "INF = 1e100\n",
-    "COLORS = [\"red\", \"blue\", \"green\", \"yellow\", \"purple\", \"orange\", \"pink\", \"brown\", \"black\", \"gray\"]\n",
-    "\n",
+    "# Probabilité d'avoir une arête entre deux sommets (chemin entre deux villes)\n",
+    "PROBABILITY_EDGE = 0.4\n",
+    "# Poids (distance) minimum d'une arête\n",
+    "MIN_WEIGHT = 5\n",
+    "# Poids (distance) maximum d'une arête\n",
+    "MAX_WEIGHT = 50\n",
+    "# Valeur infinie pour représenter une connexion impossible\n",
+    "INF = 1e10\n",
+    "# Couleurs pour les arêtes parcourues par les camions\n",
+    "COLORS = [\"red\", \"blue\", \"green\", \"yellow\", \"purple\", \"orange\", \"pink\", \"brown\", \"black\", \"gray\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Fonction permettant de générer un graphe aléatoire"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def create_graph(nb_vertices):\n",
     "    graph = igraph.Graph.Erdos_Renyi(nb_vertices, PROBABILITY_EDGE, directed=False)\n",
+    "\n",
     "    graph[\"title\"] = \"Graphe des villes\"\n",
     "    graph.vs[\"name\"] = [\"Ville \" + str(i) for i in range(nb_vertices)]\n",
+    "\n",
+    "    # La fonction simplify() supprime les arêtes en double\n",
+    "    # Permet d'alléger le graphe et la recherche de solutions\n",
     "    graph.simplify()\n",
+    "\n",
     "    set_random_weights(graph)\n",
+    "\n",
     "    return graph\n",
     "\n",
+    "# Définir des poids aléatoires pour les arêtes du graphe\n",
     "def set_random_weights(graph):\n",
-    "    matrix = [(0, 0) for _ in range(NB_VERTICES)]\n",
-    "    for i in range(NB_VERTICES):\n",
-    "        matrix[i] = (MIN_WEIGHT * i, MIN_WEIGHT * i)\n",
-    "    for edge in graph.es:\n",
-    "        edge[\"weight\"] = round(math.sqrt((matrix[edge.source][0] - matrix[edge.target][0]) ** 2 + (matrix[edge.source][1] - matrix[edge.target][1]) ** 2))\n",
-    "        edge[\"label\"] = edge[\"weight\"]\n",
+    "    nb_vertices = graph.vcount()\n",
+    "    matrix = [(0, 0) for _ in range(nb_vertices)]\n",
     "\n",
+    "    for i in range(nb_vertices):\n",
+    "        # matrix[i] = (np.random.randint(MIN_WEIGHT, MAX_WEIGHT), np.random.randint(MIN_WEIGHT, MAX_WEIGHT))\n",
+    "        matrix[i] = (MIN_WEIGHT * i, MIN_WEIGHT * i)\n",
+    "\n",
+    "    # print(matrix)\n",
+    "\n",
+    "    for edge in graph.es:\n",
+    "        # edge[\"weight\"] = np.random.randint(MIN_WEIGHT, MAX_WEIGHT)\n",
+    "        edge[\"weight\"] = round(math.sqrt((matrix[edge.source][0] - matrix[edge.target][0]) ** 2 + (matrix[edge.source][1] - matrix[edge.target][1]) ** 2))\n",
+    "        edge[\"label\"] = edge[\"weight\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Fonction permettant de récupérer la matrice d'adjacence du graphe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_adjacency_matrix(graph):\n",
     "    matrice = np.full((graph.vcount(), graph.vcount()), INF)\n",
+    "\n",
     "    for edge in graph.es:\n",
     "        u, v = edge.source, edge.target\n",
     "        weight = edge['weight']\n",
     "        matrice[u, v] = weight\n",
-    "        matrice[v, u] = weight\n",
-    "    np.fill_diagonal(matrice, 0)\n",
-    "    return matrice\n",
+    "        matrice[v, u] = weight  # Car le graphe est non orienté\n",
     "\n",
+    "    np.fill_diagonal(matrice, 0)\n",
+    "\n",
+    "    return matrice"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Fonction permettant de résoudre le problème de routage de véhicules (VRP)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def solve(matrix):\n",
+    "    # Créer le problème PuLP\n",
+    "    nb_vertices = len(matrix)\n",
+    "    start_city = round(nb_vertices / 2)\n",
     "    prob = pulp.LpProblem(\"VRP\", pulp.LpMinimize)\n",
-    "    c = pulp.LpVariable.dicts(\"c\", [(i, j, k) for i in range(NB_VERTICES) for j in range(NB_VERTICES) for k in range(NB_TRUCKS)], lowBound=0, upBound=1, cat=pulp.LpBinary)\n",
-    "    u = pulp.LpVariable.dicts(\"u\", (i for i in range(1, NB_VERTICES)), lowBound=1, upBound=NB_VERTICES-1, cat=pulp.LpInteger)\n",
-    "    prob += pulp.lpSum(matrix[i][j] * c[(i, j, k)] for i in range(NB_VERTICES) for j in range(NB_VERTICES) for k in range(NB_TRUCKS))\n",
-    "    for i in range(NB_VERTICES):\n",
-    "        prob += pulp.lpSum(c[(i, j, k)] for j in range(NB_VERTICES) for k in range(NB_TRUCKS)) >= 1\n",
+    "\n",
+    "    # ------------------------------------------------- #\n",
+    "    # Variables de décision\n",
+    "    # ------------------------------------------------- #\n",
+    "    # Indique si l'arête (i, j) est empruntée par le camion k\n",
+    "    c = pulp.LpVariable.dicts(\"c\", [(i, j, k) for i in range(nb_vertices) for j in range(nb_vertices) for k in range(NB_TRUCKS)], lowBound=0, upBound=1, cat=pulp.LpBinary)\n",
+    "    # Indique la position du camion k\n",
+    "    u = pulp.LpVariable.dicts(\"u\", (i for i in range(1, nb_vertices)), lowBound=1, upBound=nb_vertices-1, cat=pulp.LpInteger)\n",
+    "\n",
+    "    # Fonction objectif\n",
+    "    prob += pulp.lpSum(matrix[i][j] * c[(i, j, k)] for i in range(nb_vertices) for j in range(nb_vertices) for k in range(NB_TRUCKS))\n",
+    "\n",
+    "    # ------------------------------------------------- #\n",
+    "    # Contraintes\n",
+    "    # ------------------------------------------------- #\n",
+    "    # Chaque ville doit être visitée au moins une fois\n",
+    "    for i in range(nb_vertices):\n",
+    "        prob += pulp.lpSum(c[(i, j, k)] for j in range(nb_vertices) for k in range(NB_TRUCKS)) >= 1\n",
+    "\n",
+    "    # L'ensemble des chemins parcourus forment un cycle\n",
     "    for k in range(NB_TRUCKS):\n",
-    "        for i in range(1, NB_VERTICES):\n",
-    "            prob += pulp.lpSum(c[(i, j, k)] for j in range(NB_VERTICES)) - pulp.lpSum(c[(j, i, k)] for j in range(NB_VERTICES)) == 0\n",
+    "        for i in range(1, nb_vertices):\n",
+    "            prob += pulp.lpSum(c[(i, j, k)] for j in range(nb_vertices)) - pulp.lpSum(c[(j, i, k)] for j in range(nb_vertices)) == 0\n",
+    "\n",
+    "    # Tous les camions doivent partir de la ville START_CITY\n",
     "    for k in range(NB_TRUCKS):\n",
-    "        prob += pulp.lpSum(c[START_CITY, j, k] for j in [x for x in range(NB_VERTICES) if x != START_CITY]) == 1\n",
+    "        prob += pulp.lpSum(c[start_city, j, k] for j in [x for x in range(nb_vertices) if x != start_city]) == 1\n",
+    "\n",
+    "    # Tous les camions doivent revenir à la ville START_CITY\n",
     "    for k in range(NB_TRUCKS):\n",
-    "        prob += pulp.lpSum(c[i, START_CITY, k] for i in [x for x in range(NB_VERTICES) if x != START_CITY]) == 1\n",
+    "        prob += pulp.lpSum(c[i, start_city, k] for i in [x for x in range(nb_vertices) if x != start_city]) == 1\n",
+    "\n",
+    "    # Ne pas boucler sur la même ville\n",
     "    for k in range(NB_TRUCKS):\n",
-    "        prob += pulp.lpSum(c[(i, i, k)] for i in range(NB_VERTICES)) == 0\n",
-    "    for i in range(1, NB_VERTICES):\n",
-    "        for j in range(1, NB_VERTICES):\n",
+    "        prob += pulp.lpSum(c[(i, i, k)] for i in range(nb_vertices)) == 0\n",
+    "\n",
+    "    # Empêcher les sous-tours (contrainte de Miller-Tucker-Zemlin)\n",
+    "    for i in range(1, nb_vertices):\n",
+    "        for j in range(1, nb_vertices):\n",
     "            if i != j:\n",
     "                for k in range(NB_TRUCKS):\n",
-    "                    prob += u[i] - u[j] + (NB_VERTICES - 1) * c[(i, j, k)] <= NB_VERTICES - 2\n",
-    "    prob.solve(pulp.GUROBI(Cuts=0, Presolve=0, Heuristics=0, OutputFlag=1, msg=1, TimeLimit=TIME_LIMIT))\n",
-    "    return [(i, j, k) for i in range(NB_VERTICES) for j in range(NB_VERTICES) for k in range(NB_TRUCKS) if c[(i, j, k)].varValue > 0]\n",
+    "                    prob += u[i] - u[j] + (nb_vertices - 1) * c[(i, j, k)] <= nb_vertices - 2\n",
     "\n",
+    "    # Paramètres du solveur pour limiter le temps de résolution (en secondes)\n",
+    "    prob.solve(pulp.GUROBI(Cuts=1, Presolve=1, Heuristics=0, OutputFlag=0, msg=0, TimeLimit=TIME_LIMIT, logPath=\"gurobi.log\"))\n",
+    "    # solver = pulp.PULP_CBC_CMD(timeLimit=TIME_LIMIT)\n",
+    "    # prob.solver(solver)\n",
+    "\n",
+    "    # Afficher les résultats\n",
+    "    print(\"Status:\", pulp.LpStatus[prob.status])\n",
+    "    print(\"Objective:\", pulp.value(prob.objective))\n",
+    "\n",
+    "    for v in sorted(prob.variables(), key=lambda v: v.toDict()[\"name\"].split(\"_\")[-1][0:-1]):\n",
+    "        if v.varValue > 0 and v.name.startswith(\"c\"):\n",
+    "            print(v.name, \"=\", v.varValue, v)\n",
+    "\n",
+    "    return [(i, j, k) for i in range(nb_vertices) for j in range(nb_vertices) for k in range(NB_TRUCKS) if c[(i, j, k)].varValue > 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Fonction permettant de vérifier que la solution est valide (les cycles sont fermés)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def check_valid_cycles(solution):\n",
     "    cycles = {k: [] for k in range(NB_TRUCKS)}\n",
     "    for i, j, k in solution:\n",
@@ -307,13 +435,69 @@
     "        else:\n",
     "            cycle_info.append((k, path, True))\n",
     "    \n",
-    "    return cycle_info\n",
-    "\n",
-    "\n",
+    "    return cycle_info"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Lancement de la simulation et affichage des résultats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set parameter Username\n",
+      "Set parameter Cuts to value 1\n",
+      "Set parameter Presolve to value 1\n",
+      "Set parameter Heuristics to value 0\n",
+      "Status: Not Solved\n",
+      "Objective: 646.0\n",
+      "c_(0,_1,_0) = 1.0 c_(0,_1,_0)\n",
+      "c_(1,_2,_0) = 1.0 c_(1,_2,_0)\n",
+      "c_(10,_14,_0) = 1.0 c_(10,_14,_0)\n",
+      "c_(11,_12,_0) = 1.0 c_(11,_12,_0)\n",
+      "c_(12,_22,_0) = 1.0 c_(12,_22,_0)\n",
+      "c_(13,_8,_0) = 1.0 c_(13,_8,_0)\n",
+      "c_(14,_11,_0) = 1.0 c_(14,_11,_0)\n",
+      "c_(17,_13,_0) = 1.0 c_(17,_13,_0)\n",
+      "c_(19,_20,_0) = 1.0 c_(19,_20,_0)\n",
+      "c_(2,_4,_0) = 1.0 c_(2,_4,_0)\n",
+      "c_(20,_17,_0) = 1.0 c_(20,_17,_0)\n",
+      "c_(21,_19,_0) = 1.0 c_(21,_19,_0)\n",
+      "c_(22,_21,_0) = 1.0 c_(22,_21,_0)\n",
+      "c_(4,_6,_0) = 1.0 c_(4,_6,_0)\n",
+      "c_(5,_9,_0) = 1.0 c_(5,_9,_0)\n",
+      "c_(6,_5,_0) = 1.0 c_(6,_5,_0)\n",
+      "c_(7,_0,_0) = 1.0 c_(7,_0,_0)\n",
+      "c_(8,_7,_0) = 1.0 c_(8,_7,_0)\n",
+      "c_(9,_10,_0) = 1.0 c_(9,_10,_0)\n",
+      "c_(0,_1,_1) = 1.0 c_(0,_1,_1)\n",
+      "c_(1,_3,_1) = 1.0 c_(1,_3,_1)\n",
+      "c_(12,_8,_1) = 1.0 c_(12,_8,_1)\n",
+      "c_(15,_18,_1) = 1.0 c_(15,_18,_1)\n",
+      "c_(16,_15,_1) = 1.0 c_(16,_15,_1)\n",
+      "c_(18,_12,_1) = 1.0 c_(18,_12,_1)\n",
+      "c_(3,_16,_1) = 1.0 c_(3,_16,_1)\n",
+      "c_(7,_0,_1) = 1.0 c_(7,_0,_1)\n",
+      "c_(8,_7,_1) = 1.0 c_(8,_7,_1)\n"
+     ]
+    }
+   ],
+   "source": [
     "def main():\n",
     "    graphe = create_graph(nb_vertices=NB_VERTICES)\n",
     "    matrice = get_adjacency_matrix(graph=graphe)\n",
+    "\n",
     "    solution = solve(matrice)\n",
+    "\n",
     "    cycle_info = check_valid_cycles(solution)\n",
     "\n",
     "    for k, path, valid in cycle_info:\n",
@@ -322,23 +506,30 @@
     "        else:\n",
     "            print(f\"Truck {k}: Invalid cycle - Path: {path}\")\n",
     "\n",
-    "    BASE_COLOR = \"#ececec\"\n",
+    "    # Colorier les arêtes parcourues par les camions\n",
+    "    BASE_COLOR = \"#f5f5f5\"\n",
+    "\n",
     "    for edge in graphe.es:\n",
     "        try:\n",
     "            sol = list(filter(lambda s: (s[0] == edge.source) and (s[1] == edge.target) or (s[1] == edge.source) and (s[0] == edge.target), solution))[0]\n",
+    "\n",
     "            if sol is not None:\n",
     "                edge[\"color\"] = COLORS[sol[2]]\n",
     "                continue\n",
     "        except:\n",
     "            pass\n",
+    "\n",
     "        edge[\"color\"] = BASE_COLOR\n",
     "\n",
+    "    # Somme cumulée des distances parcourues pour chaque camion\n",
     "    total_distance = [0] * NB_TRUCKS\n",
+    "    \n",
     "    for edge in graphe.es:\n",
     "        for i in range(NB_TRUCKS):\n",
     "            if edge[\"color\"] == COLORS[i]:\n",
     "                total_distance[i] += edge[\"weight\"]\n",
     "\n",
+    "    # Afficher le graphe\n",
     "    figures, axes = plt.subplots()\n",
     "    igraph.plot(\n",
     "        graphe,\n",
@@ -347,7 +538,7 @@
     "        vertex_size=50,\n",
     "        vertex_label=graphe.vs[\"name\"],\n",
     "        vertex_label_size=10,\n",
-    "        vertex_color=[\"yellow\" if v.attributes()[\"name\"] == f\"Ville {START_CITY}\" else \"red\" if v.degree() > 0 else \"black\" for v in graphe.vs],\n",
+    "        vertex_color=[\"yellow\" if v.attributes()[\"name\"] == f\"Ville {START_CITY}\" else \"red\" if v.degree() > 0 else \"black\" for v in graphe.vs], # Les villes n'ayant aucun lien avec d'autre villes sont en noir\n",
     "        edge_width=3,\n",
     "        edge_color=graphe.es[\"color\"],\n",
     "        edge_label=[e[\"weight\"] if e.attributes()[\"color\"] != BASE_COLOR else \"\" for e in graphe.es]\n",
@@ -358,6 +549,7 @@
     "    ]\n",
     "\n",
     "    axes.legend(custom_legend, [line.get_label() for line in custom_legend], loc=\"upper right\")\n",
+    "\n",
     "    plt.show()\n",
     "\n",
     "if __name__ == \"__main__\":\n",
@@ -397,7 +589,7 @@
     "`écrire ici le résultat des tests`\n",
     "Chaque camion commence et termine son parcours à la ville de départ (Ville 50), couvrant les villes assignées de manière optimale.\n",
     "\n",
-    "### Éxploitation \n",
+    "### Exploitation \n",
     "#### Mise en place\n",
     "Pour exploiter cet algorithme dans un contexte réel, voici les étapes de mise en place :\n",
     "\n",
@@ -445,7 +637,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -459,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
