feat (Livrable2): Cas de test

--- a/Livrable2.ipynb
+++ b/Livrable2.ipynb
@@ -359,7 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solve(matrix):\n",
+    "def solve(matrix, nb_trucks=NB_TRUCKS, time_limit=TIME_LIMIT):\n",
     "    # Créer le problème PuLP\n",
     "    nb_vertices = len(matrix)\n",
     "    start_city = round(nb_vertices / 2)\n",
@@ -384,27 +384,27 @@
     "        prob += pulp.lpSum(c[(i, j, k)] for j in range(nb_vertices) for k in range(NB_TRUCKS)) >= 1\n",
     "\n",
     "    # L'ensemble des chemins parcourus forment un cycle\n",
-    "    for k in range(NB_TRUCKS):\n",
+    "    for k in range(nb_trucks):\n",
     "        for i in range(1, nb_vertices):\n",
     "            prob += pulp.lpSum(c[(i, j, k)] for j in range(nb_vertices)) - pulp.lpSum(c[(j, i, k)] for j in range(nb_vertices)) == 0\n",
     "\n",
     "    # Tous les camions doivent partir de la ville START_CITY\n",
-    "    for k in range(NB_TRUCKS):\n",
+    "    for k in range(nb_trucks):\n",
     "        prob += pulp.lpSum(c[start_city, j, k] for j in [x for x in range(nb_vertices) if x != start_city]) == 1\n",
     "\n",
     "    # Tous les camions doivent revenir à la ville START_CITY\n",
-    "    for k in range(NB_TRUCKS):\n",
+    "    for k in range(nb_trucks):\n",
     "        prob += pulp.lpSum(c[i, start_city, k] for i in [x for x in range(nb_vertices) if x != start_city]) == 1\n",
     "\n",
     "    # Ne pas boucler sur la même ville\n",
-    "    for k in range(NB_TRUCKS):\n",
+    "    for k in range(nb_trucks):\n",
     "        prob += pulp.lpSum(c[(i, i, k)] for i in range(nb_vertices)) == 0\n",
     "\n",
     "    # Empêcher les sous-tours (contrainte de Miller-Tucker-Zemlin)\n",
     "    for i in range(1, nb_vertices):\n",
     "        for j in range(1, nb_vertices):\n",
     "            if i != j:\n",
-    "                for k in range(NB_TRUCKS):\n",
+    "                for k in range(nb_trucks):\n",
     "                    prob += u[i] - u[j] + (nb_vertices - 1) * c[(i, j, k)] <= nb_vertices - 2\n",
     "\n",
     "    # Paramètres du solveur pour limiter le temps de résolution (en secondes)\n",
@@ -420,7 +420,7 @@
     "        if v.varValue > 0 and v.name.startswith(\"c\"):\n",
     "            print(v.name, \"=\", v.varValue, v)\n",
     "\n",
-    "    return [(i, j, k) for i in range(nb_vertices) for j in range(nb_vertices) for k in range(NB_TRUCKS) if c[(i, j, k)].varValue > 0]"
+    "    return [(i, j, k) for i in range(nb_vertices) for j in range(nb_vertices) for k in range(nb_trucks) if c[(i, j, k)].varValue > 0]"
    ]
   },
   {
@@ -532,7 +532,7 @@
     "    graphe = create_graph(nb_vertices=NB_VERTICES)\n",
     "    matrice = get_adjacency_matrix(graph=graphe)\n",
     "\n",
-    "    solution = solve(matrice)\n",
+    "    solution = solve(matrice, nb_trucks=NB_TRUCKS, time_limit=TIME_LIMIT)\n",
     "\n",
     "    cycle_info = check_valid_cycles(solution)\n",
     "\n",
@@ -590,6 +590,89 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Démonstration du fonctionnement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Exemple de test 1\n",
+    "- 1 camion\n",
+    "- 5 à 40 villes (incrément de 5)\n",
+    "- Probabilité d'une arête: 40%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "def main():\n",
+    "    nb_villes = list(range(5, 50, 5))\n",
+    "    temps = []\n",
+    "\n",
+    "    for nb_ville in nb_villes:\n",
+    "        graphe = create_graph(nb_vertices=nb_ville)\n",
+    "        matrice = get_adjacency_matrix(graph=graphe)\n",
+    "\n",
+    "        start_time = time.time()\n",
+    "        solve(matrice, nb_trucks=1, time_limit=TIME_LIMIT)\n",
+    "        temps.append(time.time() - start_time)\n",
+    "        print(f\"Temps de résolution pour {nb_ville} villes : {temps[-1]}\")\n",
+    "\n",
+    "    plt.plot(nb_villes, temps)\n",
+    "    plt.xlabel(\"Nombre de villes\")\n",
+    "    plt.ylabel(\"Temps de résolution (s)\")\n",
+    "    plt.title(\"Temps de résolution en fonction du nombre de villes pour 1 camion\")\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Exemple de test 2\n",
+    "- 2 camion\n",
+    "- 5 à 25 villes (incrément de 5)\n",
+    "- Probabilité d'une arête: 40%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "def main():\n",
+    "    nb_villes = list(range(5, 25, 5))\n",
+    "    temps = []\n",
+    "\n",
+    "    for nb_ville in nb_villes:\n",
+    "        graphe = create_graph(nb_vertices=nb_ville)\n",
+    "        matrice = get_adjacency_matrix(graph=graphe)\n",
+    "\n",
+    "        start_time = time.time()\n",
+    "        solve(matrice, nb_trucks=2, time_limit=TIME_LIMIT)\n",
+    "        temps.append(time.time() - start_time)\n",
+    "        print(f\"Temps de résolution pour {nb_ville} villes : {temps[-1]}\")\n",
+    "\n",
+    "    plt.plot(nb_villes, temps)\n",
+    "    plt.xlabel(\"Nombre de villes\")\n",
+    "    plt.ylabel(\"Temps de résolution (s)\")\n",
+    "    plt.title(\"Temps de résolution en fonction du nombre de villes pour 1 camion\")\n",
+    "    plt.show()"
    ]
   },
   {
