--- a/Livrable2.ipynb
+++ b/Livrable2.ipynb
@@ -175,7 +175,7 @@
     "\n",
     "- Algorithmes Approximatifs :\n",
     "\n",
-    "Les heuristiques et méta-heuristiques réduisent la complexité en temps par rapport aux méthodes exactes, mais ne garantissent pas de solution optimale. Typiquement, ces algorithmes ont une complexité de O(n^2) à O(n^3) par itération et plusieurs itérations sont nécessaires pour converger vers une bonne solution.\n",
+    "Réduisent la complexité en temps par rapport aux méthodes exactes, mais ne garantissent pas de solution optimale. Typiquement, ces algorithmes ont une complexité de O(n^2) à O(n^3) par itération et plusieurs itérations sont nécessaires pour converger vers une bonne solution.\n",
     "\n",
     "**En résumé pour la complexité de ce problème :**\n",
     "\n",
@@ -186,24 +186,24 @@
     "    | **Algorithmes Approximatifs**    | $O(n^2)$ à $O(n^3)$ par itération |\n",
     "\n",
     "\n",
-    "Nous allons alors s'orienter sur une méthode hybride contenant un algorithmes approximatif avec les heuristiques et méta-heuristiques grâce à cette approche nous pourrons avoir une solution dans un temps raisonnable même si celle-ci ne sera  optimale sur les calculs d'envergure mais aussi permettra de donner la solution optimal dans de plus petit calculs.  \n",
+    "Nous allons alors s'orienter sur une méthode hybride contenant un algorithmes progressif grâce à cette approche nous pourrons avoir une solution dans un temps raisonnable même si celle-ci ne sera  optimale sur les calculs d'envergure mais aussi permettra de donner la solution optimal dans de plus petit calculs.  \n",
     "\n",
     "### Méthodologie\n",
     "#### Approche choisie\n",
     "\n",
-    "L'approche hybride choisie pour résoudre le Problème de Routage de Véhicules (VRP) combine des heuristiques, des méta-heuristiques, et des méthodes exactes pour équilibrer la qualité des solutions obtenues et le temps de calcul nécessaire.\n",
+    "L'approche hybride choisie pour résoudre le Problème de Routage de Véhicules (VRP) combine les méthodes exactes pour équilibrer la qualité des solutions obtenues et le temps de calcul nécessaire.\n",
     "\n",
-    "1. Initialisation avec une Heuristique :\n",
-    "L’algorithme commence par générer une solution initiale en utilisant une heuristique de Clarke et Wright ou une heuristique d'insertion. Cette étape est rapide et produit une solution de départ, qui, bien que non optimale, est souvent de bonne qualité.\n",
+    "1. Initialisation :\n",
+    "L’algorithme commence par générer une solution initiale peu optimal. Cette étape est rapide et produit une solution de départ, qui nous permet un point de démarre a l'optimisation\n",
     "\n",
     "2. Optimisation Locale :\n",
     "Une fois la solution initiale obtenue, une optimisation locale est appliquée pour améliorer la qualité de la solution.\n",
     "\n",
-    "3. Exploration Globale avec Méta-Heuristique :\n",
+    "3. Exploration Globale :\n",
     "Pour optimiser, une méta-heuristique est utilisée pour accepter temporairement des solutions moins bonnes, permettant ainsi d’échapper aux minima locaux en diminuant progressivement la probabilité d'acceptation. En parallèle, de nouvelles solutions en appliquant des opérations de croisement et de mutation, favorisant la reproduction des meilleures solutions pour explorer efficacement l'espace de recherche.\n",
     "\n",
     "4. Affinement avec Méthodes Exactes :\n",
-    "Pour affiner et améliorer les solutions trouvées par les méta-heuristiques. Ces méthodes garantissent l'optimalité sur des sous-ensembles du problème, permettant ainsi d'améliorer la solution globale.\n",
+    "Pour affiner et améliorer les solutions trouvées. Ces méthodes garantissent l'optimalité sur des sous-ensembles du problème, permettant ainsi d'améliorer la solution globale.\n",
     "\n",
     "Cette approche hybride permet de tirer parti des avantages des différentes techniques d’optimisation en les combinant nous arrivons a obtenir des solutions de qualité dans un temps qui reste raisonnable\n",
     "\n",
