--- a/Livrable2.ipynb
+++ b/Livrable2.ipynb
@@ -1477,9 +1477,25 @@
     "\n",
     "### Résumé\n",
     "Points et conclusions clés.\n",
+    "Dans cette étude, nous avons développé un algorithme pour résoudre le problème de tournées de véhicules (VRP). Nous avons abordé les principales contraintes du problème, telles que l'optimisation des trajets et la minimisation des coûts. Notre solution se distingue par son efficacité à traiter des ensembles de données variés et à produire des trajets optimisés en termes de distance et de temps.\n",
+    "\n",
+    "Nous avons démontré que notre algorithme peut améliorer les opérations logistiques en réduisant les distances parcourues et en optimisant l'utilisation des ressources. Les résultats obtenus montrent une réduction significative des coûts opérationnels, tout en respectant les contraintes de capacité des véhicules et les délais de livraison.\n",
+    "\n",
+    "En résumé, notre approche propose une solution viable et efficace pour les entreprises cherchant à optimiser leurs tournées de livraison, avec un potentiel d'adaptation à divers scénarios logistiques.\n",
     "\n",
     "### Travaux futurs\n",
-    "Recherches et propositions potentielles."
+    "1. **Fonctionnalités supplémentaires**\n",
+    "\n",
+    "- Afin de rendre notre algorithme plus complet et ainsi l'encré dans un besoin réel, on pourrait envisager l'ajout de la prise en compte de la capacité des camions. Il s'agit d'une contrainte importante dans de nombreux problèmes de VRP, car elle permet de limiter la quantité de marchandises transportée par chaque camion. L'algorithme devrait être capable de prendre en compte la capacité de chaque camion et de s'assurer qu'elle n'est jamais dépassée. Cela peut impliquer de modifier la fonction objective pour minimiser le nombre de camions utilisés ou de diviser le problème en plusieurs sous-problèmes plus petits.\n",
+    "- La gestion de plusieurs dépôts pourrait aussi venir compléter notre projet. Il pourrait y avoir plusieurs dépôts d'où les camions partent et reviennent. L'algorithme devrait alors être capable de gérer cette situation en optimisant les trajets entre les différents dépôts et les villes.\n",
+    "\n",
+    "Ces deux points rendraient biensur le problème bien plus compliqué et sa résolution verrai ça durer augmenter significativement sans approximation importante ou autre prise de décisions arbitraire.\n",
+    "\n",
+    "\n",
+    "2. **Améliorations de l'algorithme :**\n",
+    "\n",
+    "- En développement des heuristiques plus performantes, l'efficacité de l'algorithme peut être améliorée afin de réduire le temps de calcul nécessaire pour trouver des solutions de qualité.\n",
+    "- Expérimentation de différentes méthodes d'optimisation. Il existe différentes méthodes d'optimisation qui peuvent être utilisées pour résoudre le problème de VRP, telles que la programmation par contrainte, les algorithmes génétiques ou les méta-heuristiques. Il est important d'expérimenter différentes méthodes pour déterminer laquelle est la plus efficace pour le problème considéré."
    ]
   },
   {
@@ -1507,7 +1523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
