--- a/Livrable2.ipynb
+++ b/Livrable2.ipynb
@@ -1501,15 +1501,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Références\n",
-    "\n",
-    "https://www.python.org/"
-    "https://docs.python.org/fr/"
-    "https://jupyter.org/"
-    "https://www.gurobi.com/"
-    "https://pypi.org/project/PuLP/"
-    "https://fr.wikipedia.org/wiki/Probl%C3%A8me_de_tourn%C3%A9es_de_v%C3%A9hicules"
-    "https://www.zonensi.fr/NSI/Terminale/C09/graphe_python/"
+    "## Références\n"
    ]
   }
  ],
