--- a/Livrable2.ipynb
+++ b/Livrable2.ipynb
@@ -1501,7 +1501,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Références\n"
+    "## Références\n",
+    "\n",
+    "- https://www.python.org/\n",
+    "- https://docs.python.org/fr/\n",
+    "- https://jupyter.org/\n",
+    "- https://www.gurobi.com/\n",
+    "- https://pypi.org/project/PuLP/\n",
+    "- https://fr.wikipedia.org/wiki/Problème_de_tournées_de_véhicules\n",
+    "- https://www.zonensi.fr/NSI/Terminale/C09/graphe_python/"
    ]
   }
  ],
